--- a/parts/res/values/arrays.xml
+++ b/parts/res/values/arrays.xml
@@ -94,5 +94,16 @@
         <item>"2,0,0,-2,-4,0,0"</item>
     </string-array>
 
+    <string-array name="device_refresh_rates">
+        <item>60 Hz</item>
+        <item>90 Hz</item>
+        <item>120 Hz</item>
+    </string-array>
+    <string-array name="device_refresh_rates_val">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
 
